[gd_scene load_steps=5 format=3 uid="uid://cjxcia5ix7yeq"]

[ext_resource type="Script" uid="uid://cworl8q8hhxds" path="res://scripts/main_menu.gd" id="1_i26rj"]
[ext_resource type="StyleBox" uid="uid://cnae5nyyasc8e" path="res://Rounded/rounded_buttons.tres" id="2_eiy7p"]
[ext_resource type="StyleBox" uid="uid://junt2bwp5ogo" path="res://Rounded/rounded_hover.tres" id="2_h7a2f"]
[ext_resource type="StyleBox" uid="uid://dj3g0wxa271qp" path="res://Rounded/rounded_disabled.tres" id="4_xll78"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.403922, 0.635294, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -188.0
offset_right = 192.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 95
text = "GRIDLOCK"

[node name="VBox" type="VBoxContainer" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NewButton" type="Button" parent="CenterContainer/VBox/VBox"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("2_h7a2f")
theme_override_styles/normal = ExtResource("2_eiy7p")
text = "New Game"

[node name="LoadButton" type="Button" parent="CenterContainer/VBox/VBox"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/disabled = ExtResource("4_xll78")
theme_override_styles/hover = ExtResource("2_h7a2f")
theme_override_styles/normal = ExtResource("2_eiy7p")
text = "Continue Game"

[node name="AboutButton" type="Button" parent="CenterContainer/VBox/VBox"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("2_h7a2f")
theme_override_styles/normal = ExtResource("2_eiy7p")
text = "About"

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VBox/VBox"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("2_h7a2f")
theme_override_styles/normal = ExtResource("2_eiy7p")
text = "How To Play"

[node name="QuitButton" type="Button" parent="CenterContainer/VBox/VBox"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("2_h7a2f")
theme_override_styles/normal = ExtResource("2_eiy7p")
text = "Quit"
